<resources>
    <string name="app_name">AttendanceSystem</string>
    <string name="title_name">Attendance System</string>
    <string name="errorText"> </string>
    <string name="userId">Employee Id</string>
    <string name="password">Password</string>
    <string name="logInButton">LogIn Button</string>
    <string name="welcomeBoss">Welcome Boss</string>
    <string name="sign_out">Sign out</string>
    <string name="employee_name_employerPage">Employee\'s name</string>
    <string name="password_employerPage">Employee\'s Password</string>
    <string name="employeeId_employerPage">Employee\'s id</string>
    <string name="employee_search">Search by name</string>
    <string name="search">Search</string>
    <string name="add">Add</string>
    <string name="checkIn">Check In</string>
    <string name="submit">Submit</string>
    <string name="timeView"> </string>
    <string name="checkOut">Check Out</string>
    <string name="history">History</string>
    <string name="historyEmployeeName" />
    <string name="employeeHistoryId">EmployeeHistoryId</string>
    <string name="employerEditNme">Employee\'s name</string>
    <string name="employerEditId">employerEditId</string>
    <string name="employerEditDate">Date</string>
    <string name="editCheckIn">Check In</string>
    <string name="editCheckOut">Check Out</string>
    <string name="editTime">Time</string>
    <string name="edit">Edit</string>
    <string name="changeIntToString">00%s</string>
    <string name="both">Both</string>
    <string name="cancel">Cancel</string>
    <string name="checkInTime">CheckIn Time</string>
    <string name="checkOutTime">CheckOut Time</string>
    <string name="info">INFO</string>
    <string name="signing_in_info">Signing In</string>
    <string name="signIn_info">* Start by signing in to the system,enter your user id and password</string>
    <string name="log_in">Marking attendance</string>
    <string name="history_info">* Tap history to check your history.</string>
    <string name="signOut_info">* Tap sign out to log out of system.</string>
    <string name="statement_logIn1">* Mark your attendance by selecting check in and check out and submit.</string>
    <string name="uniqueToken">Unique Token</string>
    <string name="welcomeText"><b>Welcome to Attendance System</b></string>
    <string name="admin">SuperVisor Name</string>
    <string name="addSuperVisor">Add SuperVisor (Employer)</string>
    <string name="checkedOutAt">Checked Out at: %1s \n \n Duration: %2s</string>
    <string name="checkedInAt">Checked In at: %s</string>
    <string name="esimies">esimies</string>
    <string name="worker">worker</string>
    <string name="userInactive">User Inactive !!!</string>
    <string name="wrongCredentials">Wrong Credentials !!!</string>
    <string name="welcomeEmployeeDetails">Welcome, %1s (%2s)</string>
    <string name="uniqueKey">112233</string>
    <string name="remove_employee_id">Change Status(Employee ID)</string>
    <string name="info_button">Info button</string>
    <string name="addManager">Add manager Button</string>
    <string name="signup_employer">SignUp for Employer</string>
    <string name="absent">Absent</string>
    <string name="empty_field_message">Required fields empty</string>
    <string name="inactive">inactive</string>
    <string name="active">active</string>
    <string name="displayDetail">%1s, %2s (%3s)</string>
    <string name="status">Status</string>
    <string name="current_status">Current Status:</string>
    <string name="duration">%1dHours %2dMinutes %3dSeconds</string>
</resources>