<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".employeeWindow">

    <View
        android:id="@+id/view3"
        android:layout_width="408dp"
        android:layout_height="101dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="607dp"
        android:background="#94AFB3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <View
        android:id="@+id/view4"
        android:layout_width="412dp"
        android:layout_height="54dp"
        android:layout_marginTop="573dp"
        android:layout_marginEnd="1dp"
        android:background="#94AFB3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view3"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/employeePageText"
        android:layout_width="366dp"
        android:layout_height="69dp"
        android:text="@string/employee_name_employerPage"
        android:textColor="@color/navyBlue"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/view3"
        app:layout_constraintHorizontal_bias="0.511"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view3"
        app:layout_constraintVertical_bias="0.019" />

    <Button
        android:id="@+id/historyBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/history"
        android:background="@drawable/round_buttons"
        android:backgroundTint="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.214"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.152" />

    <Button
        android:id="@+id/logOutBtn2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_out"
        android:background="@drawable/round_buttons"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.856"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.152" />

    <RadioGroup
        android:id="@+id/checkRadioGroup"
        android:layout_width="228dp"
        android:layout_height="97dp"
        app:layout_constraintBottom_toTopOf="@+id/view4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view3"
        app:layout_constraintVertical_bias="0.5">

        <RadioButton
            android:id="@+id/checkInRadio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/checkIn" />

        <RadioButton
            android:id="@+id/checkOutRadio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/checkOut" />
    </RadioGroup>

    <ImageButton
        android:id="@+id/submitBtn"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/submit"
        app:layout_constraintBottom_toTopOf="@+id/view4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkRadioGroup"
        app:srcCompat="@drawable/submiticon"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/timeView"
        android:layout_width="243dp"
        android:layout_height="78dp"
        android:text="@string/timeView"
        android:textSize="25sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@+id/checkRadioGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view3" />

</androidx.constraintlayout.widget.ConstraintLayout>