<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".Info">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".activity">

        <TextView
            android:id="@+id/infoHead"
            android:layout_width="139dp"
            android:layout_height="49dp"
            android:text="@string/info"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.018" />

        <TextView
            android:id="@+id/infoSignIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signing_in_info"
            android:textColor="@color/black"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.137"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.066" />

        <ImageView
            android:id="@+id/mainPage_image"
            android:layout_width="218dp"
            android:layout_height="383dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.578"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/infoSignIn"
            app:layout_constraintVertical_bias="0.027"
            app:srcCompat="@drawable/mainpage" />

        <TextView
            android:id="@+id/statement_signIn"
            android:layout_width="346dp"
            android:layout_height="14dp"
            android:text="@string/signIn_info"
            android:textColor="@color/black"
            android:textSize="10sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.829"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mainPage_image"
            app:layout_constraintVertical_bias="0.012" />

        <TextView
            android:id="@+id/logIn_info"
            android:layout_width="143dp"
            android:layout_height="23dp"
            android:text="@string/log_in"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.138"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/statement_signIn"
            app:layout_constraintVertical_bias="0.013" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="218dp"
            android:layout_height="383dp"
            android:layout_marginTop="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.576"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logIn_info"
            app:layout_constraintVertical_bias="0.033"
            app:srcCompat="@drawable/employeepage" />

        <LinearLayout
            android:layout_width="352dp"
            android:layout_height="123dp"
            android:layout_marginStart="72dp"
            android:layout_marginTop="7dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="132dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2">

            <TextView
                android:id="@+id/statement_logIn1"
                android:layout_width="348dp"
                android:layout_height="25dp"
                android:layout_marginTop="36dp"
                android:text="@string/statement_logIn1"
                android:textColor="@color/black"
                android:textSize="10sp" />

            <TextView
                android:id="@+id/statement_logIn2"
                android:layout_width="329dp"
                android:layout_height="26dp"
                android:text="@string/history_info"
                android:textColor="@color/black"
                android:textSize="10sp" />

            <TextView
                android:id="@+id/statement_logIn3"
                android:layout_width="326dp"
                android:layout_height="26dp"
                android:text="@string/signOut_info"
                android:textColor="@color/black"
                android:textSize="10sp" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>


