<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <View
        android:id="@+id/topView"
        android:layout_width="408dp"
        android:layout_height="101dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="607dp"
        android:background="#94AFB3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/attendanceTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_name"
        android:textColor="@color/navyBlue"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/topView"
        app:layout_constraintEnd_toEndOf="@+id/topView"
        app:layout_constraintStart_toStartOf="@+id/topView"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/bottomView"
        android:layout_width="412dp"
        android:layout_height="54dp"
        android:background="#94AFB3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topView"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/errorText"
        android:layout_width="221dp"
        android:layout_height="68dp"
        android:text="@string/errorText"
        android:textColor="@color/red"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/bottomView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.542"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topView"
        app:layout_constraintVertical_bias="0.154" />

    <EditText
        android:id="@+id/userIdText"
        android:layout_width="237dp"
        android:layout_height="48dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/userId"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toTopOf="@+id/bottomView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/errorText"
        app:layout_constraintVertical_bias="0.144" />

    <EditText
        android:id="@+id/passwordText"
        android:layout_width="239dp"
        android:layout_height="52dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toTopOf="@+id/bottomView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userIdText"
        app:layout_constraintVertical_bias="0.128"
        tools:ignore="SpeakableTextPresentCheck"
        android:importantForAutofill="no" />

    <!--- https://icons8.com/icons/set/log-in icon's source -->
    <ImageButton
        android:id="@+id/logInButton"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="170dp"
        android:layout_height="99dp"
        android:layout_marginBottom="92dp"
        android:contentDescription="@string/logInButton"
        app:layout_constraintBottom_toTopOf="@+id/bottomView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordText"
        app:layout_constraintVertical_bias="0.68"
        app:srcCompat="@drawable/sign1"
        tools:ignore="SpeakableTextPresentCheck,RedundantDescriptionCheck" />

    <ImageButton
        android:id="@+id/infoButton"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="99dp"
        android:layout_height="94dp"
        android:contentDescription="@string/info_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.81"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.134"
        app:srcCompat="@drawable/helpbutton"
        app:tint="@color/teal_700" />

    <ImageButton
        android:id="@+id/addSuperVisorBtn"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/addManager"
        app:layout_constraintBottom_toTopOf="@+id/errorText"
        app:layout_constraintEnd_toStartOf="@+id/infoButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.893"
        app:srcCompat="@drawable/addicon"
        tools:ignore="SpeakableTextPresentCheck,ImageContrastCheck" />


</androidx.constraintlayout.widget.ConstraintLayout>